Fixed the alignment issue and added the 'hireTalent' section

--- a/css/main.css
+++ b/css/main.css
@@ -365,7 +365,7 @@ nav{
 #intro{
 	z-index: 999;
 }
-#areas, #professionals, #whyUs{
+#areas, #professionals, #whyUs, #hireTalent{
 	background: #fff;
 	width: 100%;
 	float: left;
@@ -482,3 +482,22 @@ nav{
 .whyUsReasons img {
 	padding-top: 1em;
 }
+
+#hireTalent h2{
+	text-align: center;
+	padding-top: 5%;
+	text-transform: uppercase;
+}
+
+.getStartedButton {
+	width: 10em;
+	text-align: center;
+	padding: 1em;
+	background: #2BB4E8;
+	color: #fff;
+	border-radius: 0.5em;
+	margin-left:35%;
+}
+
+
+
